@startuml
!include Mdt/SerialPort/PinoutSignals.puml
!include Qt/Core/QObject.puml
!include Qt/Core/QTimer.puml
!include Qt/SerialPort/QSerialPort.puml

namespace Mdt.SerialPort {

  class AbstractPinoutSignalsEventNotifier {
  }

  AbstractPinoutSignalsEventNotifier *--> PinoutSignals

  class PinoutSignalsEventNotifier {
  }

  AbstractPinoutSignalsEventNotifier <|-- PinoutSignalsEventNotifier
}

QObject <|-- Mdt.SerialPort.AbstractPinoutSignalsEventNotifier
Mdt.SerialPort.PinoutSignalsEventNotifier --> QSerialPort
Mdt.SerialPort.PinoutSignalsEventNotifier *--> QTimer


namespace Mdt.SerialPort.TestLib {

  class TestPinoutSignalsEventNotifier {
  }

}

Mdt.SerialPort.AbstractPinoutSignalsEventNotifier <|-- Mdt.SerialPort.TestLib.TestPinoutSignalsEventNotifier


@enduml
